Addressed Apple Sign-in Bugs - Apple Sign in now fully functional

--- a/Whisk/Info.plist
+++ b/Whisk/Info.plist
@@ -7,13 +7,15 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>GoogleSignIn</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.1024881494123-ltn58rjaub5l2eqkvdp3de0ote7qvtkd</string>
+				<string>com.googleusercontent.apps.1024881494123-qrpgrh9bb9qe17hqb1k1cbib6psdqkr2</string>
 			</array>
 		</dict>
 	</array>
 	<key>GIDClientID</key>
-	<string>1024881494123-ltn58rjaub5l2eqkvdp3de0ote7qvtkd.apps.googleusercontent.com</string>
+	<string>1024881494123-qrpgrh9bb9qe17hqb1k1cbib6psdqkr2.apps.googleusercontent.com</string>
 </dict>
 </plist>
