--- a/Whisk/MISC/GoogleService-Info.plist
+++ b/Whisk/MISC/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1024881494123-ltn58rjaub5l2eqkvdp3de0ote7qvtkd.apps.googleusercontent.com</string>
+	<string>1024881494123-qrpgrh9bb9qe17hqb1k1cbib6psdqkr2.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1024881494123-ltn58rjaub5l2eqkvdp3de0ote7qvtkd</string>
+	<string>com.googleusercontent.apps.1024881494123-qrpgrh9bb9qe17hqb1k1cbib6psdqkr2</string>
 	<key>API_KEY</key>
 	<string>AIzaSyALJZuvFnEd7h05R7xbt84BdSbdpv7p8hg</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.alyinc.whisk</string>
+	<string>com.alyinc.Whisk</string>
 	<key>PROJECT_ID</key>
 	<string>whisk-e5ea2</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1024881494123:ios:14234b56d510209d69892e</string>
+	<string>1:1024881494123:ios:42e4d74dcd50794e69892e</string>
 </dict>
 </plist>
